# rust-vector-db-demo

./: .gitignore  Cargo.toml  README.md  compose.yaml  rustfmt.toml
.devcontainer/: devcontainer.json
Docker/qdrant/: Dockerfile
Docker/rust/: Dockerfile
src/: main.rs
