[package]
name = "rust-vector-db-demo"
version = "0.1.0"
edition = "2021"
authors = ["Mochineko <t.o.e.4315@gmail.com>"]
license = "MIT"
description = "A demonstration to use vector database for text on Rust in Docker."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
qdrant-client = "1.4.0"
rust-bert = "0.21.0"
